# pdf-to-mp3-cli

./: .env.example  PLAN.md  README.md  pyproject.toml
src/pdf_to_mp3/: __init__.py  cli.py  converter.py  gui.py  pdf_reader.py  tts_azure.py  tts_edge.py
src/pdf_to_mp3_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
