[project]
name = "pdf-to-mp3-cli"
version = "0.1.0"
description = "CLI que convierte PDF/DOCX a MP3 con Azure Speech SDK (español latino)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0",
    "python-docx>=1.2.0",
    "azure-cognitiveservices-speech>=1.34",
    "edge-tts>=6.1.11",
    "click>=8.0",
    "tkinterdnd2>=0.4.2",
]

[project.scripts]
pdf2mp3 = "pdf_to_mp3.cli:main"
pdf2mp3-gui = "pdf_to_mp3.gui:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
